tui/src/ui/snapshots/skill_book__ui__install_wizard__tests__snapshot_empty_wizard.snap
---
source: tui/src/ui/install_wizard.rs
assertion_line: 99
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "┌Install Skill─────────────────────────────────────────────────────────────────┐",
        "│Skill: (no skill selected)                                                    │",
        "│                                                                              │",
        "│Scope: [●] global  [ ] project  (Tab to switch)                               │",
        "│                                                                              │",
        "│┌Agents (Space to toggle)────────────────────────────────────────────────────┐│",
        "││                                                                            ││",
        "││                                                                            ││",
        "││                                                                            ││",
        "││                                                                            ││",
        "││                                                                            ││",
        "││                                                                            ││",
        "││                                                                            ││",
        "││                                                                            ││",
        "││                                                                            ││",
        "││                                                                            ││",
        "│└────────────────────────────────────────────────────────────────────────────┘│",
        "│Enter: confirm install  |  Esc: back to search                                │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
